override theme variables

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 {{ define "header_css" }}{{ end }}
 {{ define "body_classes" }}page-home{{ end }}
 {{ define "header_classes" }}header-transparent{{ end }}
-{{ define "meta"}}<meta name="description" content="keptn open source project">{{ end }}
+{{ define "meta"}}<meta name="description" content="Building the fabric for cloud-native lifecycle automation at enterprise scale">{{ end }}
 
 {{ define "main" }}
 
