--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12">
         <div class="footer-inner">
-          <h3 class="footer-title">Logo Built with love by Dynatrace</h3>
+          <h3 class="footer-title">Logo // built with ❤️ by Dynatrace</h3>
           <ul class="footer-menu">
             <li><a href="{{ .Site.BaseURL }}">Wiki</a></li>
             <li><a href="{{ .Site.BaseURL }}contact">Social Media Icons</a></li>
