--- a/assets/scss/pages/roadmap/_page-roadmap-list.scss
+++ b/assets/scss/pages/roadmap/_page-roadmap-list.scss
@@ -1,4 +1,4 @@
-.page-services-list {
+.page-roadmap-list {
   background-image: url('../images/undraw_businesswoman_pc12.svg');
   background-repeat: no-repeat;
   background-size: 115%;
