--- a/assets/scss/pages/roadmap/_roadmap-single.scss
+++ b/assets/scss/pages/roadmap/_roadmap-single.scss
@@ -1,8 +1,8 @@
-.service-single {
+.roadmap-single {
   h1.title {
     font-size: 3rem;
     font-family: $font-family-heading;
-    color: $primary;
+    color: #ff00ff;
   }
   .content {
     > p {
