--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,10 +3,11 @@
     <div class="row">
       <div class="col-12">
         <div class="footer-inner">
-          <h3 class="footer-title"><img alt="Keptn" src="{{ .Site.BaseURL }}images/logo_white.svg" />built with ❤️ by Dynatrace</h3>
+          <img alt="Keptn" src="{{ .Site.BaseURL }}images/logo_white.svg" class="footer-logo"/><h3 class="footer-title">built with ❤️ by Dynatrace</h3>
           <ul class="footer-menu">
-            <li><a href="{{ .Site.BaseURL }}">Wiki</a></li>
-            <li><a href="{{ .Site.BaseURL }}contact">Social Media Icons</a></li>
+            <li><a href="https://github.com/keptn/" target="_blank"><img alt="github" src="{{ .Site.BaseURL }}social/github.svg" /></a></li>
+            <li><a href="https://keptn.slack.com/" target="_blank"><img alt="slack" src="{{ .Site.BaseURL }}social/slack.svg" /></a></li>
+            <li><a href="https://twitter.com/keptnproject" target="_blank"><img alt="twitter" src="{{ .Site.BaseURL }}social/twitter.svg" /></a></li>
           </ul>
         </div>
       </div>
