--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,56 +12,123 @@
   </div>
 </div>
 
-{{ $roadmap := where (where .Site.RegularPages "Type" "roadmap") ".Params.featured" true }}
-{{if gt (len $roadmap) 0}}
+
 <div class="container pt-8 pt-md-12 pb-md-12">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="mb-3">Roadmap</h2>
+      <h2 class="mb-3">Advantages of keptn</h2>
     </div>
-    {{ $roadmap := where (where .Site.RegularPages "Type" "roadmap") ".Params.featured" true }}
-    {{ range first 6 (sort $roadmap ".Params.weight") }}
+
     <div class="col-12 col-md-4 mb-1">
-      {{ .Render "summary" }}
+      <h5>Best practices out-of-the box</h5>
+      <br>
+      Keptn supports best practices and the latest delivery platforms utilized by modern applications while ensuring that you can easily get started in minutes.
     </div>
-    {{ end }}
+
+    <div class="col-12 col-md-4 mb-1">
+      <h5>Future-proof and pluggable</h5>
+      <br>
+      One-off implementations often lead to eventual maintenance problems. Keptn provides a core framework that you can use to build cohesive, standardized cloud native-fabric for your organization. Keptn also enables you to replace tools as you wish and avoid vendor lock-in.
+    </div>
+
+    <div class="col-12 col-md-4 mb-1">
+      <h5>Smart and flexible</h5>
+      <br>
+      Concepts like GitOps, self-healing, and unbreakable deployments can be implemented in different ways, varying from one organization to the next. While keptn has built-in intelligence that assists you in taking advantage of these industry best practices, it’s flexible enough to address your specific needs.
+    </div>
+
     <div class="col-12 text-center">
+      <br>  <br>  <br>
       <a class="button button-primary" href="{{ .Site.BaseURL }}roadmap">View Roadmap</a>
     </div>
   </div>
 </div>
-{{end}}
+
 
 <div class="strip strip-grey">
 <div class="container pt-5 pb-5 pt-md-8 pb-md-8">
   <div class="row justify-content-center">
     <div class="col-12">
-      <h2 class="text-center text-dark mb-3">Core design principles</h2>
+      <h2 class="text-center text-dark mb-3">Core capabilities</h2>
     </div>
-    {{ range .Site.Data.principles }}
+
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-        {{ if .image }}<div class="feature-image"><img alt="{{ .title }} logo" src="{{ .image }}" /></div> {{ end }}
-        <h2 class="feature-title">{{ .title }}</h2>
-        <div class="feature-content">{{ .description }}</div>
+        <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Automated multistage unbreakable delivery pipelines</h2>
+        <div class="feature-content">GitOps-enabled delivery pipelines with automated quality gates support automated testing and monitoring-as-a-service.</div>
       </div>
     </div>
-    {{end}}
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+        <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Self-healing blue/green deployments</h2>
+        <div class="feature-content">Deployments that follow the “Operations as Code” paradigm automatically remediate problems and get your deployment pipeline working again in under a minute.</div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+        <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Event-driven runbook automation</h2>
+        <div class="feature-content">Production problems can be automatically remediated in real-time by executing runbooks that require no manual intervention.</div>
+      </div>
+    </div>
+
   </div>
   <div class="row justify-content-center">
     <div class="col-12">
       <br><br>
-      <h2 class="text-center text-dark mb-3">Core capabilities</h2>
+      <h2 class="text-center text-dark mb-3">Design principles</h2>
     </div>
-    {{ range .Site.Data.capabilities }}
+
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-        {{ if .image }}<div class="feature-image"><img alt="{{ .title }} logo" src="{{ .image }}" /></div> {{ end }}
-        <h2 class="feature-title">{{ .title }}</h2>
-        <div class="feature-content">{{ .description }}</div>
+      <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">GitOps-based collaboration</h2>
+        <div class="feature-content">All keptn workflows are based on the GitOps paradigm.</div>
       </div>
     </div>
-    {{end}}
+
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+      <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Operator patterns for all logic components</h2>
+        <div class="feature-content">Logic components can be reused for other operational tasks.</div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+      <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Monitoring and operations as code</h2>
+        <div class="feature-content">Developer-friendly definition of monitoring and operational tasks.</div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+      <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Built on and for Kubernetes</h2>
+        <div class="feature-content">Built for modern cloud-native environments.</div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+      <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Event-driven and serverless</h2>
+        <div class="feature-content">Powerful with a minimal resource footprint. (available in V0.2)</div>
+      </div>
+    </div>
+
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+      <div class="feature-image"><img alt="" src="" /></div>
+        <h2 class="feature-title">Pluggable tooling</h2>
+        <div class="feature-content">All tools leveraged by keptn can be replaced based on your tool preferences (available in V0.2).</div>
+      </div>
+    </div>
+
   </div>
 </div>
 </div>
