update homepage content and remove unused files

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,26 +20,21 @@
     </div>
 
     <div class="col-12 col-md-4 mb-1">
-      <h5>Best practices out-of-the box</h5>
+      <h4>Best practices out-of-the box</h4>
       <br>
       Keptn supports best practices and the latest delivery platforms utilized by modern applications while ensuring that you can easily get started in minutes.
     </div>
 
     <div class="col-12 col-md-4 mb-1">
-      <h5>Future-proof and pluggable</h5>
+      <h4>Future-proof and pluggable</h4>
       <br>
       One-off implementations often lead to eventual maintenance problems. Keptn provides a core framework that you can use to build cohesive, standardized cloud native-fabric for your organization. Keptn also enables you to replace tools as you wish and avoid vendor lock-in.
     </div>
 
     <div class="col-12 col-md-4 mb-1">
-      <h5>Smart and flexible</h5>
+      <h4>Smart and flexible</h4>
       <br>
       Concepts like GitOps, self-healing, and unbreakable deployments can be implemented in different ways, varying from one organization to the next. While keptn has built-in intelligence that assists you in taking advantage of these industry best practices, it’s flexible enough to address your specific needs.
-    </div>
-
-    <div class="col-12 text-center">
-      <br>  <br>  <br>
-      <a class="button button-primary" href="{{ .Site.BaseURL }}roadmap">View Roadmap</a>
     </div>
   </div>
 </div>
@@ -54,21 +49,21 @@
 
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-        <div class="feature-image"><img alt="" src="" /></div>
+        <div class="feature-image"><img alt="" src="/images/water-pipe-100.png" /></div>
         <h2 class="feature-title">Automated multistage unbreakable delivery pipelines</h2>
         <div class="feature-content">GitOps-enabled delivery pipelines with automated quality gates support automated testing and monitoring-as-a-service.</div>
       </div>
     </div>
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-        <div class="feature-image"><img alt="" src="" /></div>
+        <div class="feature-image"><img alt="" src="/images/fixpack-gray700.png" /></div>
         <h2 class="feature-title">Self-healing blue/green deployments</h2>
         <div class="feature-content">Deployments that follow the “Operations as Code” paradigm automatically remediate problems and get your deployment pipeline working again in under a minute.</div>
       </div>
     </div>
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-        <div class="feature-image"><img alt="" src="" /></div>
+        <div class="feature-image"><img alt="" src="/images/repair-gray700.png" /></div>
         <h2 class="feature-title">Event-driven runbook automation</h2>
         <div class="feature-content">Production problems can be automatically remediated in real-time by executing runbooks that require no manual intervention.</div>
       </div>
@@ -83,7 +78,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-      <div class="feature-image"><img alt="" src="" /></div>
+      <div class="feature-image"><img alt="" src="/images/git-signet-gray700.png" /></div>
         <h2 class="feature-title">GitOps-based collaboration</h2>
         <div class="feature-content">All keptn workflows are based on the GitOps paradigm.</div>
       </div>
@@ -91,7 +86,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-      <div class="feature-image"><img alt="" src="" /></div>
+      <div class="feature-image"><img alt="" src="/images/services-gray700.png" /></div>
         <h2 class="feature-title">Operator patterns for all logic components</h2>
         <div class="feature-content">Logic components can be reused for other operational tasks.</div>
       </div>
@@ -99,7 +94,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-      <div class="feature-image"><img alt="" src="" /></div>
+      <div class="feature-image"><img alt="" src="images/coding-gray700.png" /></div>
         <h2 class="feature-title">Monitoring and operations as code</h2>
         <div class="feature-content">Developer-friendly definition of monitoring and operational tasks.</div>
       </div>
@@ -107,7 +102,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-      <div class="feature-image"><img alt="" src="" /></div>
+      <div class="feature-image"><img alt="" src="images/kubernetes-signet-gray700.png" /></div>
         <h2 class="feature-title">Built on and for Kubernetes</h2>
         <div class="feature-content">Built for modern cloud-native environments.</div>
       </div>
@@ -115,7 +110,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-      <div class="feature-image"><img alt="" src="" /></div>
+      <div class="feature-image"><img alt="" src="images/serverless-icon.png" /></div>
         <h2 class="feature-title">Event-driven and serverless</h2>
         <div class="feature-content">Powerful with a minimal resource footprint. (available in V0.2)</div>
       </div>
@@ -123,7 +118,7 @@
 
     <div class="col-12 col-md-6 col-lg-4 mb-2">
       <div class="feature">
-      <div class="feature-image"><img alt="" src="" /></div>
+      <div class="feature-image"><img alt="" src="images/plug-in-connection-gray700.png" /></div>
         <h2 class="feature-title">Pluggable tooling</h2>
         <div class="feature-content">All tools leveraged by keptn can be replaced based on your tool preferences (available in V0.2).</div>
       </div>
