--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,23 +20,30 @@
       <br>
     </div>
 
-    <div class="col-12 col-md-4 mb-1">
-      <h4>Best practices out-of-the box</h4>
-      <br>
-      Keptn supports best practices and the latest delivery platforms utilized by modern applications while ensuring that you can easily get started in minutes.
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+        <div class="feature-image"><img alt="" src="/images/fixpack-gray700.png" /></div>
+        <h2 class="feature-title">Best practices out-of-the box</h2>
+        <div class="feature-content">Keptn supports best practices and the latest delivery platforms utilized by modern applications while ensuring that you can easily get started in minutes.</div>
+      </div>
     </div>
 
-    <div class="col-12 col-md-4 mb-1">
-      <h4>Future-proof and pluggable</h4>
-      <br>
-      One-off implementations often lead to eventual maintenance problems. Keptn provides a core framework that you can use to build cohesive, standardized cloud native-fabric for your organization. Keptn also enables you to replace tools as you wish and avoid vendor lock-in.
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+        <div class="feature-image"><img alt="" src="/images/astronaut-helmet.png" /></div>
+        <h2 class="feature-title">Future-proof and pluggable</h2>
+        <div class="feature-content">One-off implementations often lead to eventual maintenance problems. Keptn provides a core framework that you can use to build cohesive, standardized cloud native-fabric for your organization. Keptn also enables you to replace tools as you wish and avoid vendor lock-in.</div>
+      </div>
     </div>
 
-    <div class="col-12 col-md-4 mb-1">
-      <h4>Smart and flexible</h4>
-      <br>
-      Concepts like GitOps, self-healing, and unbreakable deployments can be implemented in different ways, varying from one organization to the next. While keptn has built-in intelligence that assists you in taking advantage of these industry best practices, it’s flexible enough to address your specific needs.
+    <div class="col-12 col-md-6 col-lg-4 mb-2">
+      <div class="feature">
+        <div class="feature-image"><img alt="" src="/images/swiss-army-knife.png" /></div>
+        <h2 class="feature-title">Smart and flexible</h2>
+        <div class="feature-content">Concepts like GitOps, self-healing, and unbreakable deployments can be implemented in different ways, varying from one organization to the next. While keptn has built-in intelligence that assists you in taking advantage of these industry best practices, it’s flexible enough to address your specific needs.</div>
+      </div>
     </div>
+
   </div>
 </div>
 
