add github corner

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -60,6 +60,7 @@
 @import 'components/strip';
 @import 'components/whitebox';
 @import 'components/feature';
+@import 'components/github-corner';
 
 // Pages
 @import 'pages/home';
