--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,7 @@
   {{ partial "main-menu-mobile.html" . }}
   <div class="wrapper">
     {{ partial "header.html" . }}
+    {{ partial "github-corner.html" . }}
     {{ block "main" . }}
     {{ end }}
   </div>
