--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -1,3 +1,4 @@
+{{ if .Site.Menus.main }}
 <div id="main-menu" class="main-menu">
   <ul>
     {{ $currentPage := . }}
@@ -11,3 +12,4 @@
     {{end}}
   </ul>
 </div>
+{{end}}
