add google site verification

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{{ block "title" . }}{{ .Title }} - {{ .Site.Title }}{{ end }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="wDzKASaTgmwGTtV-z_O-NU_6e1wOgA7spKT96o9r8XE" />
   {{ block "meta" . }}{{end}}
   <link rel="icon" href="{{ .Site.BaseURL }}favicon.png">
 
