--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
-<div class="footer">
+<div class="footer fixed-bottom">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="footer-inner">
-          <img alt="Keptn" src="{{ .Site.BaseURL }}images/logo_white.svg" class="footer-logo"/><h3 class="footer-title">built with <span style="font-size: 1.8rem">&#x2665;</span> by Dynatrace</h3>
+          <img alt="Keptn" src="{{ .Site.BaseURL }}images/logo_white.svg" class="footer-logo"/><span class="footer-title">built with <span style="font-size: 1.8rem">&#x2665;</span> <a href="https://dynatrace.com" target="_blank">by Dynatrace</a></span>
           <ul class="footer-menu">
             <li><a href="https://github.com/keptn/" target="_blank"><img alt="github" src="{{ .Site.BaseURL }}social/github.svg" /></a></li>
             <li><a href="https://keptn.slack.com/" target="_blank"><img alt="slack" src="{{ .Site.BaseURL }}social/slack.svg" /></a></li>
