--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -1,4 +1,4 @@
-<div class="sub-footer">
+<div class="sub-footer fixed-bottom">
   <div class="container">
     <div class="row">
       <div class="col-12">
