--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,6 +75,7 @@
 body {
   font-size: 1rem;
   font-family: $font-family-base;
+  margin-bottom: 50px;
   // -webkit-font-smoothing: antialiased;
   // -moz-osx-font-smoothing: grayscale;
   // -webkit-text-size-adjust: 100%;
