--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,7 +1,9 @@
+
 .footer {
   background: $secondary;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  bottom: 53px;
   .footer-inner {
     display: flex;
     justify-content: space-between;
