--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -3,13 +3,11 @@
     <div class="row">
       <div class="col-12">
         <div class="sub-footer-inner">
-          <ul>
-            <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
+          <ul class="list-inline">
+            <li class="list-inline-item"><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
                 {{ .Site.Data.contact.email }}</a></li>
           </ul>
-          <ul>
-            <li class="zerostatic"><a href="https://keptn.sh">keptn.sh</a></li>
-          </ul>
+
         </div>
       </div>
     </div>
