--- a/assets/scss/components/_github-corner.scss
+++ b/assets/scss/components/_github-corner.scss
@@ -1,6 +1,8 @@
 .github-corner svg {
-  position: absolute; 
+  position: fixed;
   right: 0px;
+  top: 49px;
+  z-index: 100;
 }
 
 .github-corner:hover .octo-arm {
