--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,16 +21,16 @@
 // @import "bootstrap/input-group";
 // @import "bootstrap/custom-forms";
 // @import "bootstrap/nav";
-// @import "bootstrap/navbar";
+@import "bootstrap/navbar";
 @import "bootstrap/card";
-// @import "bootstrap/breadcrumb";
+@import "bootstrap/breadcrumb";
 // @import "bootstrap/pagination";
 // @import "bootstrap/badge";
 // @import "bootstrap/jumbotron";
 // @import "bootstrap/alert";
 // @import "bootstrap/progress";
 // @import "bootstrap/media";
-// @import "bootstrap/list-group";
+@import "bootstrap/list-group";
 // @import "bootstrap/close";
 // @import "bootstrap/modal";
 // @import "bootstrap/tooltip";
