--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class='header'>
+<div class='header fixed-top'>
   <div class="container">
     <div class="logo">
       <a href="{{ .Site.BaseURL }}"><img alt="Keptn Homepage" src="{{ .Site.BaseURL }}images/logo.svg" /></a>
