--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -89,10 +89,10 @@ $bp-xl: 1200px;
 
 // Embellishments
 $headerHeight: 3.7rem;
-$footerHeight: 7rem;
+$footerHeight: 0;
 
 
-$headerHeight: 0;
+
 $sidebarLinkWeight: 400;
 $sidebarCurrentPageWeight: 600;
 $linkActiveColor: #006BB8;
