--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer fixed-bottom">
   <div class="container">
     <div class="row">
       <div class="col-12">
