--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -29,7 +29,7 @@ $link-hover-decoration: underline;
 
 // Fonts
 $font-family-base: 'Open Sans', Arial, sans-serif, -apple-system;
-$font-family-heading: 'Lora', Arial, sans-serif, -apple-system;
+$font-family-heading: 'Open Sans', Arial, sans-serif, -apple-system;
 $font-weight-thin: 200;
 $font-weight-light: 300;
 $font-weight-normal: 400;
