Increase viewport width in docs

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="container">
+<div class="container-fluid">
 {{ .Scratch.Set "skipSeeAlso" true }}
 
 {{ partial "primary-top.html" . }}
