removing "available in V0.2", 0.2.1 is already out

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -120,7 +120,7 @@
       <div class="feature">
       <div class="feature-image"><img alt="" src="images/serverless-icon.png" /></div>
         <h2 class="feature-title">Event-driven and serverless</h2>
-        <div class="feature-content">Powerful with a minimal resource footprint. (available in V0.2)</div>
+        <div class="feature-content">Powerful with a minimal resource footprint.</div>
       </div>
     </div>
 
@@ -128,7 +128,7 @@
       <div class="feature">
       <div class="feature-image"><img alt="" src="images/plug-in-connection-gray700.png" /></div>
         <h2 class="feature-title">Pluggable tooling</h2>
-        <div class="feature-content">All tools leveraged by keptn can be replaced based on your tool preferences (available in V0.2).</div>
+        <div class="feature-content">All tools leveraged by keptn can be replaced based on your tool preferences.</div>
       </div>
     </div>
 
