--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,12 @@
 {{ define "header_css" }}{{ end }}
 {{ define "body_classes" }}page-home{{ end }}
 {{ define "header_classes" }}header-transparent{{ end }}
-{{ define "meta"}}<meta name="description" content="Building the fabric for cloud-native lifecycle automation at enterprise scale">{{ end }}
+{{ define "meta"}}
+<meta name="og:description" content="Building the fabric for cloud-native lifecycle automation at enterprise scale">
+<meta property="og:title" content="keptn - Continuous Delivery and Operations for Kubernetes">
+<meta property="og:image" content="https://keptn.sh/favicon.png">
+<meta property="og:url" content="https://keptn.sh/index.html">
+{{ end }}
 
 {{ define "main" }}
 
