added support for twitter

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
 <meta property="og:title" content="keptn - Continuous Delivery and Operations for Kubernetes">
 <meta property="og:image" content="https://keptn.sh/favicon.png">
 <meta property="og:url" content="https://keptn.sh/index.html">
+<meta name="twitter:card" content="summary_large_image">
 {{ end }}
 
 {{ define "main" }}
